--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section id="projects">
             <div class="projects-content">
-                <center> <h2>Projects</h2> </center> <br>
+                <center> <h2> Recent Projects </h2> </center> <br>
                 <div class="projects">
                     <div class="project">
                         <center> <h3>Attention</h3> </center>
