--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#education">Education</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -33,11 +35,37 @@
         <section id="about">
             <div class="about-content">
                 <h2>About Me</h2>
-                <p>Hello, I am Yousef Gomaa. As of yet, a CSIT AID Junior Student at Egypt-Japan University of Science and Technology.<br><br>Kindly find my skillset listed below.</p> <br>
-                <img src="https://skillicons.dev/icons?i=mysql,cpp,cs,c,r,py,vim,linux,bash,matlab,git,arduino,dotnet,html,css&perline=5"/> <br>
-                <br> <center> <button class="GitHub" onclick="window.location.href='https://github.com/37743/'"><b>Check out my GitHub!</b></button> </center>
+                <p>Hello, I am Yousef Gomaa. I am an Artificial Intelligence and Data Science (AID) student at the Egypt-Japan University of Science and Technology (E-JUST).
+                     My expertise spans data engineering, neural networks, and educational techniques.
             </div>
         </section>
+        <section id="education">
+            <div class="education-content">
+                <h2>Education</h2>
+                <p> - As of yet, a CSIT AID Senior Student at Egypt-Japan University of Science and Technology <br>
+                    - An Exchange Student at Hiroshima University during Fall 2024. <br>
+                </p>
+            </div>
+        </section>
+        <section id="experience">
+            <div class="experience-content">
+                <h2>Experience</h2>
+                <p>My academic background, complemented by practical experience in many diverse projects,
+                     has equipped me with strong problem-solving abilities at the intersection of advanced technology and real-world application.
+                    <br><br>Furthermore, I have taken part in specialized training programs, such as the Digital Egypt Pioneers Initiative and NTI’s Machine Learning for Data Analysis course.
+                    I’m actively seeking opportunities where I can contribute to impactful projects, especially those at the intersection of AI and neurotechnology.
+                    <br><br>Kindly find my skillset listed below. <br> </p>
+            </div>
+        </section>
+        <section id=skills">
+            <div class="skills-content">
+                <h2>Key Skills</h2>
+                <p>
+                  Kindly find my skillset listed below.</p> <br>
+                <img src="https://skillicons.dev/icons?i=mysql,cpp,cs,c,r,py,vim,linux,bash,matlab,git,arduino,dotnet,html,css&perline=5"/> <br>
+                <br> <center> <button class="GitHub" onclick="window.location.href='https://github.com/37743/'"><b>Check out my GitHub!</b></button> </center>  
+                </p> <br>
+            </div>
         <section id="projects">
             <div class="projects-content">
                 <center> <h2> Recent Projects </h2> </center> <br>
