--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 <body class="main-content">
     <header>
         <nav>
-            <h1>Yousef Gomaa</h1>
+            <h1>Yousef (Ibrahim) Gomaa</h1>
             <div class="nav-links">
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#education">Education</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -66,6 +67,7 @@
                 <br> <center> <button class="GitHub" onclick="window.location.href='https://github.com/37743/'"><b>Check out my GitHub!</b></button> </center>  
                 </p> <br>
             </div>
+        </section>
         <section id="projects">
             <div class="projects-content">
                 <center> <h2> Recent Projects </h2> </center> <br>
