--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 <p>My academic background, complemented by practical experience in many diverse projects,
                      has equipped me with strong problem-solving abilities at the intersection of advanced technology and real-world application.
                     <br><br>Furthermore, I have taken part in specialized training programs, such as the Digital Egypt Pioneers Initiative and NTI’s Machine Learning for Data Analysis course.
-                    I’m actively seeking opportunities where I can contribute to impactful projects, especially those at the intersection of AI and neurotechnology.
-                    <br><br>Kindly find my skillset listed below. <br> </p>
+                    I’m actively seeking opportunities where I can contribute to impactful projects, especially those at the intersection of AI and neurotechnology. <br> </p>
             </div>
         </section>
         <section id=skills">
