--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     I’m actively seeking opportunities where I can contribute to impactful projects, especially those at the intersection of AI and neurotechnology. <br> </p>
             </div>
         </section>
-        <section id=skills">
+        <section id="skills">
             <div class="skills-content">
                 <h2>Key Skills</h2>
                 <p>
