--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="about">
             <div class="about-content">
                 <h2>About Me</h2>
-                <p>Hello, I am Yousef Gomaa. <br> I am an Artificial Intelligence and Data Science (AID) student at the Egypt-Japan University of Science and Technology (E-JUST). <br>
+                <p>Hello, I am Yousef Gomaa. <br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST) located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
                      My expertise spans data engineering, neural networks, and educational techniques.
             </div>
         </section>
