--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <div class="about-content">
                 <h2>About Me</h2>
                 <p>Hello, I am Yousef Gomaa. <br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST) located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
-                     My expertise spans data engineering, neural networks, and educational techniques.
+                     <br> My expertise spans data engineering, neural networks, and educational techniques.
             </div>
         </section>
         <section id="education">
             <div class="education-content">
                 <h2>Education</h2>
-                <p> - As of yet, a CSIT AID Senior Student at Egypt-Japan University of Science and Technology <br>
-                    - An Exchange Student at Hiroshima University during Fall 2024. <br>
+                <p> As of yet, a CSIT AID senior student at Egypt-Japan University of Science and Technology <br>
+                    In addition, I am/was an exchange student at Hiroshima University during the Fall 2024 semester. <br>
                 </p>
             </div>
         </section>
