--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="icon" href=
         "imgs/icon.png"
           type="image/x-icon">
-    <p style="background-image: url('https://github.com/37743/37743.github.io/blob/main/imgs/BG.png');">
+    <style>
+        body { 
+          background:  url("https://github.com/37743/37743.github.io/blob/main/imgs/BG.png") no-repeat fixed center; 
+        }
+    </style>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
