--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yousef Gomaa</title>
+    <title>Yousef Gomaa - Portfolio </title>
     <link rel="icon" href=
         "imgs/icon.png"
           type="image/x-icon">
@@ -41,7 +41,7 @@
         <section id="about">
             <div class="about-content">
                 <h2>About Me</h2>
-                <p>Hello, I am Yousef Gomaa. <br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST) located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
+                <p>Hello, I am Yousef Gomaa. <br><br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST) located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
                      <br> My expertise spans data engineering, neural networks, and educational techniques.
             </div>
         </section>
