--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           type="image/x-icon">
     <style>
         body { 
-          background:  url("https://github.com/37743/37743.github.io/blob/main/imgs/BG.png") no-repeat fixed center; 
+          background:  url("imgs/BG.png") no-repeat fixed center; 
         }
     </style>
     <link rel="stylesheet" href="styles/style.css">
