--- a/index.html
+++ b/index.html
@@ -34,36 +34,42 @@
     </header>
     <main>
         <section id="about">
-            <div class="column">
-                <h2>About Me</h2>
-                <p>Hello, I am Yousef Gomaa. <br><br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST) located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
-                     <br> My expertise spans data engineering, neural networks, and educational techniques.
-            </div>
-            <div class="column">
-                <img src="imgs/aboutme.png" alt="About Me Icons" style="width:90%">
+            <div class="row">
+                <div class="column">
+                    <h2>About Me</h2>
+                    <p>Hello, I am Yousef Gomaa. <br><br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST) located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
+                         <br> My expertise spans data engineering, neural networks, and educational techniques.
+                </div>
+                <div class="column">
+                    <img src="imgs/aboutme.png" alt="About Me Icons" style="width:90%">
+                </div>
             </div>
         </section>
         <section id="education">
-            <div class="column">
-                <img src="imgs/education.png" alt="Education Icons" style="width:90%">
-            </div>
-            <div class="column">
-                <h2>Education</h2>
-                <p> As of yet, a CSIT AID senior student at Egypt-Japan University of Science and Technology <br>
-                    In addition, I am/was an exchange student at Hiroshima University during the Fall 2024 semester. <br>
-                </p>
+            <div class="row">
+                <div class="column">
+                    <img src="imgs/education.png" alt="Education Icons" style="width:90%">
+                </div>
+                <div class="column">
+                    <h2>Education</h2>
+                    <p> As of yet, a CSIT AID senior student at Egypt-Japan University of Science and Technology <br>
+                        In addition, I am/was an exchange student at Hiroshima University during the Fall 2024 semester. <br>
+                    </p>
+                </div>
             </div>
         </section>
         <section id="experience">
-            <div class="column">
-                <h2>Experience</h2>
-                <p>My academic background, complemented by practical experience in many diverse projects,
-                     has equipped me with strong problem-solving abilities at the intersection of advanced technology and real-world application.
-                    <br><br>Furthermore, I have taken part in specialized training programs, such as the Digital Egypt Pioneers Initiative and NTI’s Machine Learning for Data Analysis course.
-                    I’m actively seeking opportunities where I can contribute to impactful projects, especially those at the intersection of AI and neurotechnology. <br> </p>
-            </div>
-            <div class="column">
-                <img src="imgs/experience.png" alt="Experience Icons" style="width:90%">
+            <div class="row">
+                <div class="column">
+                    <h2>Experience</h2>
+                    <p>My academic background, complemented by practical experience in many diverse projects,
+                         has equipped me with strong problem-solving abilities at the intersection of advanced technology and real-world application.
+                        <br><br>Furthermore, I have taken part in specialized training programs, such as the Digital Egypt Pioneers Initiative and NTI’s Machine Learning for Data Analysis course.
+                        I’m actively seeking opportunities where I can contribute to impactful projects, especially those at the intersection of AI and neurotechnology. <br> </p>
+                </div>
+                <div class="column">
+                    <img src="imgs/experience.png" alt="Experience Icons" style="width:90%">
+                </div>
             </div>
         </section>
         <section id="skills">
