Updated visuals and aligned elements

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#experience">Experience</a></li>
                     <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Experience</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -34,42 +34,42 @@
     </header>
     <main>
         <div class="row">
-            <div class="column">
+            <div class="column column-large">
                 <section id="about">
                     <h2>About Me</h2>
-                    <p>Hello, I am Yousef Gomaa. <br><br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST) located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
-                         <br> My expertise spans data engineering, neural networks, and educational techniques.
+                    <p>Hello, I am Yousef Gomaa. <br><br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST), located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
+                        <br> My expertise spans data engineering, neural networks, and educational techniques.
                 </section>
             </div>
-            <div class="column">
-                <img src="imgs/aboutme.png" alt="About Me Icons" style="width:50%">
+            <div class="column column-small">
+                <img src="imgs/aboutme.png" alt="About Me Icons" style="width:100%">
             </div>
         </div>
         <div class="row">
-            <div class="column">
-                <img src="imgs/education.png" alt="Education Icons" style="width:50%">
+            <div class="column column-small">
+                <img src="imgs/education.png" alt="Education Icons" style="width:100%">
             </div>
-            <div class="column">
+            <div class="column column-large">
                 <section id="education">
                     <h2>Education</h2>
-                    <p> As of yet, a CSIT AID senior student at Egypt-Japan University of Science and Technology <br>
+                    <p> As of yet, a CSIT AID senior student at Egypt-Japan University of Science and Technology. <br><br>
                         In addition, I am/was an exchange student at Hiroshima University during the Fall 2024 semester. <br>
                     </p>
                 </section>
             </div>
         </div>
         <div class="row">
-            <div class="column">
+            <div class="column column-large">
                 <section id="experience">
                     <h2>Experience</h2>
                     <p>My academic background, complemented by practical experience in many diverse projects,
-                         has equipped me with strong problem-solving abilities at the intersection of advanced technology and real-world application.
+                        has equipped me with strong problem-solving abilities at the intersection of advanced technology and real-world application.
                         <br><br>Furthermore, I have taken part in specialized training programs, such as the Digital Egypt Pioneers Initiative and NTI’s Machine Learning for Data Analysis course.
                         I’m actively seeking opportunities where I can contribute to impactful projects, especially those at the intersection of AI and neurotechnology. <br> </p>
                 </section>
             </div>
-            <div class="column">
-                <img src="imgs/experience.png" alt="Experience Icons" style="width:50%">
+            <div class="column column-small">
+                <img src="imgs/experience.png" alt="Experience Icons" style="width:100%">
             </div>
         </div>
         <section id="skills">
