--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
         <section id="projects">
             <div class="projects-content">
-                <center> <h2> Recent Projects </h2> </center> <br>
+                <center> <h2> Recent Desktop Projects </h2> </center> <br>
                 <div class="projects">
                     <div class="project">
                         <center> <h3>Attention</h3> </center>
@@ -100,6 +100,13 @@
                         <img src="imgs/project2-2.jpg" alt="Project 2-2">
                         <p>Resociety is a comprehensive application aimed at reintegrating ex-convicts into society by providing them with job opportunities and mentorship.</p>
                         <p>The Mentor's Application facilitates mentorship programs for prisoners, allowing mentors to create profiles, and update their resumes. While the Web Application serves as a platform for employers, as they can browse available services, choose the number of employees they need, and view recommended resumes without direct contact.</p>
+                    </div>
+                <center> <h2> Recent Mobile Applications </h2> </center> <br>
+                <div class="projects">
+                    <div class="project">
+                        <center> <h3>SignChat</h3> </center>
+                        <img src="imgs/phone.png" alt="Project SignChat">
+                        <p>SIGN CHAT© was a phone application project that transforms written natural languages (e.g., English) to a series of ASL gestures on a grid display and vice versa. Development plans included usage of computer vision to implement a real-time detection of hand and facial gestures through camera.</p>
                     </div>
                 </div>
                 <br> <center> <h2>..and more!</span></h2> </center> <br>
