--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
                 <center> <h2> Recent Mobile Applications </h2> </center> <br>
                 <div class="projects">
                     <div class="project">
-                        <center> <h3>SignChat</h3> </center>
+                        <center> <h3>SignChat Preview</h3> </center>
                         <img src="imgs/phone.png" alt="Project SignChat">
+                    </div>
+                    <div class="project">
+                        <center> <h3>SignChat</h3> </center>
                         <p>SIGN CHAT© was a phone application project that transforms written natural languages (e.g., English) to a series of ASL gestures on a grid display and vice versa. Development plans included usage of computer vision to implement a real-time detection of hand and facial gestures through camera.</p>
                     </div>
                 </div>
