--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                         <p>Resociety is a comprehensive application aimed at reintegrating ex-convicts into society by providing them with job opportunities and mentorship.</p>
                         <p>The Mentor's Application facilitates mentorship programs for prisoners, allowing mentors to create profiles, and update their resumes. While the Web Application serves as a platform for employers, as they can browse available services, choose the number of employees they need, and view recommended resumes without direct contact.</p>
                     </div>
+                </div>
                 <center> <h2> Recent Mobile Applications </h2> </center> <br>
                 <div class="projects">
                     <div class="project">
