--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
                         <p>The Mentor's Application facilitates mentorship programs for prisoners, allowing mentors to create profiles, and update their resumes. While the Web Application serves as a platform for employers, as they can browse available services, choose the number of employees they need, and view recommended resumes without direct contact.</p>
                     </div>
                 </div>
+                <br>
                 <center> <h2> Recent Mobile Applications </h2> </center> <br>
                 <div class="projects">
                     <div class="project">
                         <center> <h3>SignChat Preview</h3> </center>
-                        <img src="imgs/phone.png" alt="Project SignChat">
+                        <img src="imgs/phone.png" alt="Project SignChat" width="400">
                     </div>
                     <div class="project">
                         <center> <h3>SignChat</h3> </center>
