--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="projects">
                     <div class="project">
                         <center> <h3>SignChat Preview</h3> </center>
-                        <img src="imgs/phone.png" alt="Project SignChat" width="400">
+                        <img src="imgs/phone.png" alt="Project SignChat" style="width:50%>
                     </div>
                     <div class="project">
                         <center> <h3>SignChat</h3> </center>
