--- a/index.html
+++ b/index.html
@@ -105,13 +105,17 @@
                 <br>
                 <center> <h2> Recent Mobile Applications </h2> </center> <br>
                 <div class="projects">
-                    <div class="column column-large">
-                        <center> <h3>SignChat Preview</h3> </center>
-                        <img src="imgs/phone.png" alt="Project SignChat" style="width:50%">
+                    <div class="project">
+                        <div class="column column-large">
+                            <center> <h3>SignChat Preview</h3> </center>
+                            <img src="imgs/phone.png" alt="Project SignChat" style="width:50%">
+                        </div>
                     </div>
-                    <div class=""column column-small"">
-                        <center> <h3>SignChat</h3> </center>
-                        <p>SIGN CHAT© was a phone application project that transforms written natural languages (e.g., English) to a series of ASL gestures on a grid display and vice versa. Development plans included usage of computer vision to implement a real-time detection of hand and facial gestures through camera.</p>
+                    <div class="project">
+                        <div class="column column-small">
+                            <center> <h3>SignChat</h3> </center>
+                            <p>SIGN CHAT© was a phone application project that transforms written natural languages (e.g., English) to a series of ASL gestures on a grid display and vice versa. Development plans included usage of computer vision to implement a real-time detection of hand and facial gestures through camera.</p>
+                        </div>
                     </div>
                 </div>
                 <br> <center> <h2>..and more!</span></h2> </center> <br>
