--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="row">
             <div class="column column-large">
                 <section id="about">
+                    <center> <h2> Hi, I'm Yousef. </h2> </center> <br>
                     <h2>About Me</h2>
                     <p>Hello, I am Yousef Gomaa. <br><br> I am a Computer Science and Information Technology (CSIT) student majoring in Artificial Intelligence and Data Science (AID) at the Egypt-Japan University of Science and Technology (E-JUST), located in New Borg El Arab city in Alexandria Governorate, Egypt. <br>
                         <br> My expertise spans data engineering, neural networks, and educational techniques.
@@ -84,6 +85,9 @@
         </section>
         <section id="projects">
             <div class="projects-content">
+                <center> <h2> My unique selling point is.. </h2> </center> <br>
+                <center> <h1> Design, Engineer, and Implement Anything and/or Everything! </h1> </center> <br>
+                <center> <h3> (which is apparent in my projects) </h3> </center> <br>
                 <center> <h2> Recent Desktop Projects </h2> </center> <br>
                 <div class="projects">
                     <div class="project">
