--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
     <main>
+        <center> <h1 style="color:#f0f6fc"> Hi, I'm Yousef. </h1> </center> <br>
         <div class="row">
-            <center> <h1> Hi, I'm Yousef. </h1> </center> <br>
             <div class="column column-large">
                 <section id="about">
                     <h2>About Me</h2>
@@ -86,7 +86,7 @@
         <section id="projects">
             <div class="projects-content">
                 <center> <h2> My unique selling point is.. </h2> </center> <br>
-                <center> <h1> Design, Engineer, and Implement Anything and/or Everything! </h1> </center> <br>
+                <center> <h1 style="color:#f0f6fc"> Design, Engineer, and Implement Anything and/or Everything! </h1> </center> <br>
                 <center> <h3> (which is apparent in my projects) </h3> </center> <br>
                 <center> <h2> Recent Desktop Projects </h2> </center> <br>
                 <div class="projects">
