--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         <section id="projects">
             <div class="projects-content">
                 <center> <h2> My unique selling point is.. </h2> </center> <br>
-                <center> <h1 style="color:#f0f6fc"> Design, Engineer, and Implement Anything and/or Everything! </h1> </center> <br>
+                <div class="project">
+                    <center> <h1 style="color:#f0f6fc"> Design, Engineer, and Implement Anything and/or Everything! </h1> </center> <br>
+                </div>
                 <center> <h3> (which is apparent in my projects) </h3> </center> <br>
                 <center> <h2> Recent Desktop Projects </h2> </center> <br>
                 <div class="projects">
