--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <section id="projects">
             <div class="projects-content">
                 <center> <h2> My unique selling point is.. </h2> </center> <br>
-                <div class="project">
-                    <center> <h1 style="color:#f0f6fc"> Design, Engineer, and Implement Anything and/or Everything! </h1> </center> <br>
+                <div class="project" style="margin: 0 auto">
+                    <center> <h1 style="color:#f0f6fc"> Design, Engineer, and Implement Anything and/or Everything! </h1> </center>
                 </div>
-                <center> <h3> (which is apparent in my projects) </h3> </center> <br>
+                <br> <center> <h3> (which is apparent in my projects) </h3> </center> <br>
                 <center> <h2> Recent Desktop Projects </h2> </center> <br>
                 <div class="projects">
                     <div class="project">
