--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <center> <h1 style="color:#f0f6fc"> Hi, I'm Yousef. </h1> </center> <br>
+        <br> <center> <h1 style="color:#f0f6fc"> Hi, I'm Yousef. </h1> </center> <br>
         <div class="row">
             <div class="column column-large">
                 <section id="about">
