--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </header>
     <main>
         <br> <center> <h1 style="color:#f0f6fc"> Hi, I'm Yousef. </h1> </center>
+        <br> <center> <h2 style="color:#f0f6fc"> Software Developer, Machine Learning Engineer </h2> </center>
         <div class="row">
             <div class="column column-large">
                 <section id="about">
