--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <main>
         <br> <center> <h1 style="color:#f0f6fc"> Hi, I'm Yousef. </h1> </center>
         <br> <center> <h2 style="color:#f0f6fc"> Software Developer, Machine Learning Engineer </h2> </center>
+        
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="VERTICAL" data-vanity="37743-yibg" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://eg.linkedin.com/in/37743-yibg?trk=profile-badge">Yousef Gomaa</a></div>
+        
         <div class="row">
             <div class="column column-large">
                 <section id="about">
